--- a/style.css
+++ b/style.css
@@ -3,34 +3,35 @@ body {
 }
 .line1 ul {
     position: absolute;
-    top: 20rem;
+    top:130px;
     margin: auto;
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 46rem;
-    height: 10rem;
+    width: 330px;
+   
 }
 .line2 ul {
     position: absolute;
-    top: 40rem;
+    top: 250px;
     margin: auto;
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 46rem;
-    height: 10rem;
+    width: 330px;
+   
 }
 li {
     float: left;
-    width: 14rem;
-    height: 14rem;
-    border-radius: 7rem;
-    margin-right: 1.3rem;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    margin-left: -15px;
+    margin-right: 25px;
     color: white;
     text-align: center;
-    line-height: 7rem;
-    font-size: 3rem;
+    line-height: 100px;
+    font-size: 30px;
 }
 .ball-placeholder {
     background: linear-gradient(135deg, rgba(34, 34, 34, 1) 0%, rgba(0, 0, 0, 1) 100%);
@@ -45,19 +46,21 @@ li {
     color: white;
 }
 .next-ball {
-    bottom: 10rem;
-    width: 24rem;
-    height: 10rem;
-    font-size: 3rem;
+    top: 550px;
+    width: 200px;
+    height: 70px;
+    font-size: 25px;
     background: #7ac9ed;
+     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
 .play-again {
     display: none;
-    bottom: 10rem;
-    width: 24rem;
-    height: 10rem;
-    font-size: 3rem;
+    top: 550px;
+    width: 200px;
+    height: 70px;
+    font-size: 25px;
     background: #d74d2f;
+     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
 
 .lottery-ball1 {
@@ -137,5 +140,5 @@ li {
 
 .title {
     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
-    font-size: 12rem;
+    font-size: 50px;
 }
