--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    background: #666;
+    background: #777;
 }
 .line1 ul {
     position: absolute;
-    top:130px;
+    top:8rem;
     margin: auto;
     right: 0;
     left: 0;
@@ -141,5 +141,5 @@ li {
 .title {
     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
     font-size: 200px;
-    margin-top: 100px;
+    margin-top: 8rem;
 }
