--- a/style.css
+++ b/style.css
@@ -8,30 +8,30 @@ body {
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 330px;
+    width: 20rem;
    
 }
 .line2 ul {
     position: absolute;
-    top: 250px;
+    top: 15rem;
     margin: auto;
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 330px;
+    width: 20rem;
    
 }
 li {
     float: left;
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    margin-left: -15px;
-    margin-right: 25px;
+    width: 14rem;
+    height: 14rem;
+    border-radius: 7rem;
+    margin-left: 0;
+    margin-right: 1.5rem;
     color: white;
     text-align: center;
-    line-height: 100px;
-    font-size: 30px;
+    line-height: 14rem;
+    font-size: 5rem;
 }
 .ball-placeholder {
     background: linear-gradient(135deg, rgba(34, 34, 34, 1) 0%, rgba(0, 0, 0, 1) 100%);
@@ -46,19 +46,19 @@ li {
     color: white;
 }
 .next-ball {
-    top: 550px;
-    width: 200px;
-    height: 70px;
-    font-size: 25px;
+    top: 50rem;
+    width: 12rem;
+    height: 5rem;
+    font-size: 3rem;
     background: #7ac9ed;
      font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
 .play-again {
     display: none;
-    top: 550px;
-    width: 200px;
-    height: 70px;
-    font-size: 25px;
+    top: 5rem;
+    width: 12rem;
+    height: 5rem;
+    font-size: 3rem;
     background: #d74d2f;
      font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
@@ -140,6 +140,6 @@ li {
 
 .title {
     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
-    font-size: 200px;
+    font-size: 3rem;
     margin-top: 8rem;
 }
