--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 body {
-    background: #777;
+    background: rgba(165, 165, 165, 1)
 }
 .line1 ul {
     position: absolute;
-    top:8rem;
+    top:30rem;
     margin: auto;
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 20rem;
+    width: 50rem;
    
 }
 .line2 ul {
     position: absolute;
-    top: 15rem;
+    top: 60rem;
     margin: auto;
     right: 0;
     left: 0;
     list-style-type: none;
-    width: 20rem;
+    width: 50rem;
    
 }
 li {
@@ -46,19 +46,19 @@ li {
     color: white;
 }
 .next-ball {
-    top: 50rem;
-    width: 12rem;
-    height: 5rem;
-    font-size: 3rem;
+    top: 70rem;
+    width: 24rem;
+    height: 10rem;
+    font-size: 5rem;
     background: #7ac9ed;
      font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
 .play-again {
     display: none;
-    top: 5rem;
-    width: 12rem;
-    height: 5rem;
-    font-size: 3rem;
+    top: 70rem;
+    width: 24rem;
+    height: 10rem;
+    font-size: 5rem;
     background: #d74d2f;
      font-family: '궁서', '궁서체', serif, '돋움', "dotum";
 }
@@ -140,6 +140,6 @@ li {
 
 .title {
     font-family: '궁서', '궁서체', serif, '돋움', "dotum";
-    font-size: 3rem;
+    font-size: 30rem;
     margin-top: 8rem;
 }
