--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     font-family: '궁서', '궁서체', serif, '돋움', 'dotum';
     font-size: 11rem;
     margin-top: 5rem;
+    text-decoration: none;
+    color: black;
 }
 
 body {
@@ -75,7 +77,7 @@ li {
 .lottery-ball6 {
     opacity: 0;
     animation-name: fadein;
-    
+
     animation-duration: 300ms;
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
@@ -97,17 +99,17 @@ li {
 
 .lottery-ball4 {
     background: linear-gradient(135deg, rgba(0, 255, 255, 1) 0%, rgba(0, 165, 165, 1) 100%);
-     animation-delay: 600ms;
+    animation-delay: 600ms;
 }
 
 .lottery-ball5 {
     background: linear-gradient(135deg, rgba(0, 0, 255, 1) 0%, rgba(0, 0, 165, 1) 100%);
-     animation-delay: 800ms;
+    animation-delay: 800ms;
 }
 
 .lottery-ball6 {
     background: linear-gradient(135deg, rgba(255, 0, 255, 1) 0%, rgba(165, 0, 165, 1) 100%);
-     animation-delay: 1000ms;
+    animation-delay: 1000ms;
 }
 
 @keyframes fadein {
