--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+
 .title {
-    font-family: '궁서', '궁서체', serif, '돋움', 'dotum';
+    font-family: 'Song Myung';
     font-size: 11rem;
     margin-top: 5rem;
     text-decoration: none;
-    color: black;
+    color: black
 }
 
 body {
