--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+@font-face {
+    font-family: 'ChosunGs';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ChosunGs.woff')
+        format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 .title {
-    font-family: 'Song Myung';
+    font-family: 'ChosunGs'/*'Song Myung'*/;
     font-size: 11rem;
     margin-top: 5rem;
     text-decoration: none;
-    color: black
+    color: black;
 }
 
 body {
