--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ li {
     margin: auto;
     font-family: 'ChosunGs', 'Song Myung', '궁서', '궁서체', serif, '돋움', 'dotum';
     font-size: 4.5vh;
-    top: 80vh;
+    bottom: 5vh;
     width: 28vh;
     height: 10vh;
 }
@@ -114,8 +114,12 @@ li {
         opacity: 1;
     }
 }
-.ad-banner{
+.ad-banner {
+    position: absolute;
+    right: 0;
+    left: 0;
     width: 320px;
-    margin: 0 auto;
-    margin-top: 40vh;
+    margin: auto;
+
+    bottom: 18vh;
 }
